--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -3,8 +3,7 @@ name: Run unit test
 
 on: 
   push: 
-    branches: 
-      - main
+    branches: [main]
   pull_request:
     branches: [main]
   
@@ -12,9 +11,9 @@ jobs:
   build-and-test:
     runs-on: unbuntu-latest
   
-  steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node
-      uses: actions/setupnode@v3
-    - run: npm ci
-    - run: npm test
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+      - run: npm ci
+      - run: npm test
