--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v3
       - run: npm ci
-      - run: npm test
+      - run: npm run test:all
