--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -10,8 +10,9 @@ jobs:
     runs-on: unbuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Setup Node
-      uses: actions/setup-node@v3
-    - run: npm ci
-    - run: npm run test:all
+      - uses: actions/checkout@v3
+      - name: Setup Node
+        uses: actions/setup-node@v3
+      - run: npm ci
+      - run: npm run build
+      - run: npm run test:all
