--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -17,7 +17,5 @@ jobs:
         uses: actions/setup-node@v3
       - run: npm ci
         name: Install modules from npm
-      - run: npm run build
-        name: Build the application
-      - run: npm test
+      - run: npm run test:all
         name: Run the tests
