--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -2,9 +2,9 @@ name: Unit Tests
 
 on:
   push:
-    branches: ["main", "actions"]
+    branches: ["main"]
   pull_request:
-    branches: [main]
+    branches: [main, actions]
 
 jobs:
   build-and-test:
