--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -2,7 +2,7 @@ name: Unit Tests
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", 'actions']
   pull_request:
     branches: [main, actions]
 
