deny merging failed branch to main

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -2,9 +2,9 @@ name: Unit Tests
 
 on:
   push:
-    branches: ["main", 'actions']
+    branches: ["master", 'actions']
   pull_request:
-    branches: [main, actions]
+    branches: [master]
 
 jobs:
   build-and-test:
