--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -7,7 +7,7 @@ on:
     branches: [actions]
 
 jobs:
-  build-and-test:
+  unit-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +17,17 @@ jobs:
         uses: actions/setup-node@v3
       - run: npm ci
         name: Install modules from npm
-      - run: npm run build
-        name: Build the app
       - run: npm run test:all
         name: Run the tests
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: checkout repository
+        uses: actions/checkout@v3
+      - name: setup nodejs
+        uses: actions/setup-node@v3
+      - run: npm ci
+        name: Install dependencies
+      - run: npm run build
+        name: Build from source
