--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [actions]
   pull_request:
-    branches: [actions]
+    branches: [master, actions]
 
 jobs:
   unit-test:
