--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [actions]
   pull_request:
-    branches: [master, actions]
+    branches: [actions]
 
 jobs:
   unit-test:
@@ -27,6 +27,9 @@ jobs:
         uses: actions/checkout@v3
       - name: setup nodejs
         uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'npm'
       - run: npm ci
         name: Install dependencies
       - run: npm run build
