--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -27,9 +27,14 @@ jobs:
         uses: actions/checkout@v3
       - name: setup nodejs
         uses: actions/setup-node@v3
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        env:
+          cache-env-name: cache-node-modules
         with:
-          node-version: 18
-          cache: 'npm'
+          path: ~/.npm
+          key: ${{runner.os}}-build-${{env.cache-env-name}}-${{hashFiles('**/package.json.lock')}}
       - run: npm ci
         name: Install dependencies
       - run: npm run build
