--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,6 +15,12 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Node
         uses: actions/setup-node@v3
+      - name: Cache node modules
+        id: cache-npm
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{runner.os}}-${{hashFiles('**/package-lock.json')}}
       - run: npm ci
         name: Install modules from npm
       - run: npm run test:all
@@ -30,11 +36,9 @@ jobs:
       - name: Cache node modules
         id: cache-npm
         uses: actions/cache@v3
-        env:
-          cache-env-name: cache-node-modules
         with:
           path: ~/.npm
-          key: ${{runner.os}}-build-${{env.cache-env-name}}-${{hashFiles('**/package.json.lock')}}
+          key: ${{runner.os}}-${{hashFiles('**/package-lock.json')}}
       - run: npm ci
         name: Install dependencies
       - run: npm run build
